--- a/modules/govuk_jenkins/templates/jobs/search_reindex_with_new_schema.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/search_reindex_with_new_schema.yaml.erb
@@ -1,7 +1,7 @@
 ---
 - job:
-    name: search_reindex_with_new_schema
-    display-name: Search reindex with new schema
+    name: <%= @job_name %>
+    display-name: <%= @job_display_name %>
     project-type: freestyle
     description: |
       Rebuild new search indexes with up to date settings and mappings, and reindex all content from the existing indexes.
@@ -16,7 +16,7 @@
           days-to-keep: 30
           artifact-num-to-keep: 5
     builders:
-        - shell: ssh deploy@$(govuk_node_list -c search --single-node) "cd /var/apps/rummager && govuk_setenv rummager bundle exec rake rummager:migrate_schema CONFIRM_INDEX_MIGRATION_START=1 RUMMAGER_INDEX=all"
+        - shell: ssh deploy@$(govuk_node_list -c search --single-node) "cd /var/apps/<%= @target_application %> && govuk_setenv <%= @target_application %> bundle exec rake rummager:migrate_schema CONFIRM_INDEX_MIGRATION_START=1 RUMMAGER_INDEX=all"
     wrappers:
       - ansicolor:
           colormap: xterm
