Enable DCAT clean_tags
This prevents the harvesting process from crashing whenever it
finds a dataset with an invalid tag.

--- a/modules/govuk/templates/ckan/ckan.ini.erb
+++ b/modules/govuk/templates/ckan/ckan.ini.erb
@@ -113,6 +113,8 @@ ckan.harvest.mq.redis_db = 1
 
 ckan.redis.url = redis://<%= @redis_host%>:<%= @redis_port%>/1
 
+ckanext.dcat.clean_tags = true
+
 ckan.spatial.validator.profiles = iso19139eden,constraints-1.4,gemini2-1.3
 ckan.spatial.validator.reject = true
 ckan.spatial.srid = 4258
