--- a/modules/govuk/templates/static_extra_nginx_config.conf.erb
+++ b/modules/govuk/templates/static_extra_nginx_config.conf.erb
@@ -6,6 +6,11 @@ location = /static/a {
   return 200 '';
 }
 
+# 1stline use this URL in their zendesk template
+location = /static/gov.uk_logotype_crown.png {
+  return 301 /media/5c810ef4ed915d43e50ce260/gov.uk_logotype_crown.png;
+}
+
 location /__canary__ {
   default_type application/json;
   add_header cache-control "max-age=0, no-store, no-cache";
