--- a/modules/govuk/templates/static_extra_nginx_config.conf.erb
+++ b/modules/govuk/templates/static_extra_nginx_config.conf.erb
@@ -8,6 +8,7 @@ location = /static/a {
 
 # 1stline use this URL in their zendesk template
 location = /static/gov.uk_logotype_crown.png {
+  absolute_redirect off;
   return 301 /media/5c810ef4ed915d43e50ce260/gov.uk_logotype_crown.png;
 }
 
