Add content data admin to sidekiq monitoring
This adds missing configuration for sidekiq monitoring to follow
content data admin's sidekiq workers.

--- a/modules/govuk/templates/sidekiq_monitoring_nginx_config.conf.erb
+++ b/modules/govuk/templates/sidekiq_monitoring_nginx_config.conf.erb
@@ -30,6 +30,10 @@ server {
     proxy_pass http://localhost:3217;
   }
 
+  location /content-data-admin {
+    proxy_pass http://localhost:3240;
+  }
+
   location /content-performance-manager {
     proxy_pass http://localhost:3207;
   }
