restart puppet on memory error
Use a JAVA config to restart puppetmaster on out of memory error. A better way would be to get an independent mechanism to supervise puppet such as supervidord

--- a/modules/puppet/templates/puppetdb/upstart.conf.erb
+++ b/modules/puppet/templates/puppetdb/upstart.conf.erb
@@ -18,7 +18,7 @@ script
                          --startas /usr/bin/java \
                          -- \
                          <%= @java_args %> \
-                         -XX:OnOutOfMemoryError="kill -9 %p" \
+                         -XX:OnOutOfMemoryError="kill -9 %p; /etc/init.d/puppetdb restart; /etc/init.d/puppetserver restart" \
                          -jar /usr/share/puppetdb/puppetdb.jar \
                          services -c /etc/puppetdb/conf.d \
                          >> /var/log/puppetdb/upstart.out.log \
