--- a/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
@@ -62,6 +62,7 @@
                 - tldredirect
                 - servicegovuk
                 - performanceplatform
+                - datagovuk
         - string:
             name: FASTLY_USER
             default: false
