Add GitHub token for deploy lag badger
This commit adds a GitHub token to the deploy lag badger so it doesn’t get rate limited.

--- a/modules/govuk_jenkins/templates/jobs/run_deploy_lag_badger.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/run_deploy_lag_badger.yaml.erb
@@ -32,3 +32,10 @@
     wrappers:
       - ansicolor:
           colormap: xterm
+      - inject-passwords:
+          global: false
+          mask-password-params: true
+          job-passwords:
+            - name: GITHUB_TOKEN
+              password:
+                '<%= @github_token %>'
