Fix Varnish cache banning
The correct ban variable name to use is 'obj.http.x-url' not
'obj.http.url'. See the document on how to perform Varnish banning:
https://varnish-cache.org/docs/3.0/tutorial/purging.html#bans

It looks like this hasn't been working for a while now, but I tested
this in staging and it works correctly now.

--- a/modules/varnish/templates/default.vcl.erb
+++ b/modules/varnish/templates/default.vcl.erb
@@ -94,7 +94,7 @@ sub vcl_recv {
     if (!client.ip ~ purge_acl) {
       error 405 "Not allowed";
     } else {
-      ban("obj.http.url == " + req.url);
+      ban("obj.http.x-url == " + req.url);
       error 200 "Purged";
     }
   }
