Remove empty .1 log files before rotating
There seems to be a problem with logrotate whereby it will refuse
to rotate the log files if an empty .1 log file exists. This leads to
increase disk space being used by log files and can cause the disk to
fill up.

This fix should mean that all empty .1 log files are deleted before
logrotate runs which should allow it to finish successfully.

--- a/modules/logrotate/templates/logrotate.conf.erb
+++ b/modules/logrotate/templates/logrotate.conf.erb
@@ -36,4 +36,9 @@
   <%- if @maxsize -%>
   maxsize <%= @maxsize %>
   <%- end -%>
+  firstaction
+    # Remove empty .1 log files. There seems to be an issue where logrotate
+    # will refuse to rotate the logs if an empty .1 log file exists.
+    find <%= @matches %>* -wholename '/var/log/*' -name '*.1' -size 0 -delete
+  endscript
 }
