--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_errors_by_controller_action.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_errors_by_controller_action.json.erb
@@ -39,7 +39,7 @@
       "bucketAggs": [
         {
           "fake": true,
-          "field": "<%= @fields_prefix -%>controller",
+          "field": "controller",
           "id": "3",
           "settings": {
             "order": "desc",
@@ -50,7 +50,7 @@
         },
         {
           "fake": true,
-          "field": "<%= @fields_prefix -%>action",
+          "field": "action",
           "id": "4",
           "settings": {
             "order": "desc",
@@ -78,7 +78,7 @@
           "type": "count"
         }
       ],
-      "query": "application:<%= @app_name %> AND <%= @fields_prefix -%>status:[ 500 TO 599 ]",
+      "query": "application:<%= @app_name %> AND status:[ 500 TO 599 ]",
       "refId": "A",
       "target": "",
       "timeField": "@timestamp"
