--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_response_times.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_response_times.json.erb
@@ -51,7 +51,7 @@
       "dsType": "elasticsearch",
       "metrics": [
         {
-          "field": "<%= @fields_prefix -%>duration",
+          "field": "duration",
           "id": "1",
           "meta": {},
           "settings": {
