--- a/modules/grafana/templates/dashboards/application_dashboard_panels/_response_times_by_controller_action.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_panels/_response_times_by_controller_action.json.erb
@@ -39,7 +39,7 @@
       "bucketAggs": [
         {
           "fake": true,
-          "field": "<%= @fields_prefix -%>controller",
+          "field": "controller",
           "id": "3",
           "settings": {
             "order": "desc",
@@ -50,7 +50,7 @@
         },
         {
           "fake": true,
-          "field": "<%= @fields_prefix -%>action",
+          "field": "action",
           "id": "4",
           "settings": {
             "order": "desc",
@@ -73,7 +73,7 @@
       "dsType": "elasticsearch",
       "metrics": [
         {
-          "field": "<%= @fields_prefix -%>duration",
+          "field": "duration",
           "id": "1",
           "meta": {},
           "settings": {
