--- a/modules/govuk_cdnlogs/templates/etc/logrotate.cdn_logs_hourly.conf.erb
+++ b/modules/govuk_cdnlogs/templates/etc/logrotate.cdn_logs_hourly.conf.erb
@@ -8,7 +8,8 @@ to_rotate_hourly.map { |name| "#{ @log_dir }/cdn-#{ name }.log" }.join("\n")
 
 {
   su root deploy
-  rotate 1
+  daily
+  rotate <%= @days_to_keep %>
   dateext
   dateformat -%Y%m%d-%s
   compress
