--- a/modules/icinga/templates/slack_contact.cfg.erb
+++ b/modules/icinga/templates/slack_contact.cfg.erb
@@ -18,5 +18,5 @@ define command{
 # 'notify-service-by-slack' command definition
 define command{
     command_name    notify-service-by-slack
-    command_line    /usr/local/bin/icinga_slack_webhook_notify -t <%= @slack_webhook_url %> -c '<%= @slack_channel %>' -U '<%= @slack_username %>' -m '$SERVICEDESC$' -H '$HOSTDISPLAYNAME$' -A '$SERVICEACTIONURL$' -N '$SERVICENOTESURL$' -L $SERVICESTATE$ -S '<%= @nagios_cgi_url %>'
+    command_line    /usr/local/bin/icinga_slack_webhook_notify -u <%= @slack_webhook_url %> -c '<%= @slack_channel %>' -U '<%= @slack_username %>' -m '$SERVICEDESC$' -H '$HOSTDISPLAYNAME$' -A '$SERVICEACTIONURL$' -N '$SERVICENOTESURL$' -L $SERVICESTATE$ -S '<%= @nagios_cgi_url %>'
 }
