--- a/modules/icinga/templates/passive_service.erb
+++ b/modules/icinga/templates/passive_service.erb
@@ -16,4 +16,7 @@ define service {
 <%- if @notes_url -%>
   notes_url                 <%= @notes_url %>
 <%- end -%>
+<%- if @contact_groups -%>
+  contact_groups            +<%= [@contact_groups].flatten.join(',') %>
+<%- end -%>
 }
