add mirror to the Jenkins CDN deployment job
we now have a new VCL/fastly service to test the mirrors
and therefore we need to add the `mirror` option in the
Jenkins CDN deployment job.

--- a/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/deploy_cdn.yaml.erb
@@ -62,6 +62,7 @@
                 - tldredirect
                 - servicegovuk
                 - performanceplatform
+                - mirror
         - string:
             name: FASTLY_USER
             default: false
