Fix asset slave scripts not reporting errors
Previously we (re)set the nagios code to report based on the last
command run by the script, which was often not the command that failed
(e.g. an 'echo' to print out an error message). This changes the way we
set the exit status to ensure the status is assigned correctly on error.

--- a/modules/govuk/templates/node/s_asset_base/copy-attachments.sh.erb
+++ b/modules/govuk/templates/node/s_asset_base/copy-attachments.sh.erb
@@ -37,14 +37,12 @@ for NODE in $ASSET_SLAVE_NODES; do
     logger -t copy_attachments "Attachments copied to $NODE successfully"
   else
     logger -t copy_attachments "Attachments errored while copying to $NODE"
+    STATUS=1
   fi
 done
 
-if [ $? == 0 ]
-  then
-    STATUS=0
-  else
-    STATUS=1
+if [ -z $STATUS ]; then
+  STATUS=0
 fi
 
 if [ $STATUS -eq 0 ]; then
