--- a/modules/govuk/templates/node/s_asset_base/copy-attachments-to-slaves.sh.erb
+++ b/modules/govuk/templates/node/s_asset_base/copy-attachments-to-slaves.sh.erb
@@ -37,6 +37,7 @@ for FILELIST in $(find $FILELIST_DIR -type f); do
         logger -t copy_attachments_to_slaves "File ${FILENAME} copied to ${NODE}"
       else
         logger -t copy_attachments_to_slaves "File ${FILENAME} failed to copy to ${NODE}"
+        STATUS=1
       fi
     done
     <% if @s3_bucket && @process_uploaded_attachments_to_s3 %>
@@ -44,15 +45,20 @@ for FILELIST in $(find $FILELIST_DIR -type f); do
         logger -t copy_attachments_to_slaves "File ${FILENAME} copied to S3 (<%= @s3_bucket -%>)"
       else
         logger -t copy_attachments_to_slaves "File ${FILENAME} failed to copy to S3 (<%= @s3_bucket -%>)"
+        STATUS=1
       fi
     <% end %>
   done
   rm -f $FILELIST
 done
 
-if [ $? == 0 ]; then
+if [ -z $STATUS ]; then
+  STATUS=0
+fi
+
+if [ $STATUS -eq 0 ]; then
   NAGIOS_CODE=0
   NAGIOS_MESSAGE="Copying attachments to asset slaves succeeded"
 fi
 
-exit $NAGIOS_CODE
+exit $STATUS
