--- a/modules/govuk/templates/node/s_asset_base/push-attachments-to-s3.sh.erb
+++ b/modules/govuk/templates/node/s_asset_base/push-attachments-to-s3.sh.erb
@@ -36,13 +36,11 @@ if envdir /etc/govuk/aws/env.d /usr/local/bin/s3cmd --cache-file=/tmp/s3cmd_atta
   echo "Attachments copied to S3 (<%= @s3_bucket -%>) successfully"
 else
   echo "Attachments errored while copying to S3 (<%= @s3_bucket -%>)"
+  STATUS=1
 fi
 
-if [ $? == 0 ]
-  then
-    STATUS=0
-  else
-    STATUS=1
+if [ -z $STATUS ]; then
+  STATUS=0
 fi
 
 if [ $STATUS -eq 0 ]; then
